--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.0",
+    "chart.js": "3.3.2",
+    "primeicons": "^6.0.1",
+    "primevue": "^4.0.0",
     "axios": "^1.7.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.0.1",
+    "sass": "^1.55.0",
+    "tailwindcss-primeui": "^0.3.2",
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.4.9"
   }
 }
